Fix nav panel on mobile

--- a/src/components/layout/Navbar/Navbar.module.scss
+++ b/src/components/layout/Navbar/Navbar.module.scss
@@ -30,6 +30,7 @@
             flex-direction: column;
             row-gap: 6px;
             cursor: pointer;
+            transition: all 0.2s;
             
             // Displays 3 bars, can use font awesome
             div{
@@ -38,20 +39,24 @@
                 background-color: black;
                 border-radius: 2px;
             }
+
+            &.active {
+                display: none;
+            }
         }
         
         .list {
             display: flex;
             flex-direction: column;
             position: fixed;
-            top: 56px;
+            top: 0;
             width: 144px;
             row-gap: 24px;
             right: -288px;
             padding: 24px 16px;
             transition: all 0.2s;
             height: $nav-list-heigth;
-            box-shadow: -0.125rem 0 0 0 rgb(0 0 0 / 11%);
+            // box-shadow: -0.125rem 0 0 0 rgb(0 0 0 / 11%);
 
             @media (max-width: $desktop-size) {
                 @include fancyBluryBackground;
